k8s-step-by-step/03-utils/03-netdata-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  tls:
    - hosts:
      - netdata.k.erusnikov.ru
      secretName: mon-tls
  rules:
    - host: "netdata.k.erusnikov.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  name: http
